camunda8 - v2/identity/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  labels:
    app: identity
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: identity
